tests/ui/traits/negative-bounds/on-unimplemented.stderr
error[E0277]: the trait bound `NotFoo: !Foo` is not satisfied
  --> $DIR/on-unimplemented.rs:7:15
   |
LL | fn hello() -> impl !Foo {
   |               ^^^^^^^^^ the trait bound `NotFoo: !Foo` is not satisfied
LL |
LL |     NotFoo
   |     ------ return type was inferred to be `NotFoo` here
   |
help: this trait has no implementations, consider adding one
  --> $DIR/on-unimplemented.rs:4:1
   |
LL | trait Foo {}
   | ^^^^^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
